# git-branchless

./: Cargo.toml
git-branchless-lib/src/core/rewrite/: plan.rs
git-branchless/src/: opts.rs
git-branchless/src/commands/: amend.rs  mod.rs
segmented-changelog/: Cargo.toml
segmented-changelog/benches/: benches.rs
segmented-changelog/examples/: git-gca.rs
segmented-changelog/src/: lib.rs
