[package]
name = "segmented-changelog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
harness = false
name = "benches"

[dependencies]
rusqlite = "0.27.0"
thiserror = "1.0.31"

[dev-dependencies]
criterion = { version = "0.3.5", features = ["html_reports"] }
git2 = { version = "0.14.2", default-features = false }
tempfile = "3.3.0"
